<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telacadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/labelCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtNome"
        android:gravity="fill_vertical"
        android:text="@string/TCadastro"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/btOk" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelPass"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelPass"
        android:layout_centerVertical="true"
        android:ems="10" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:text="@string/labelUser"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/labelPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPass"
        android:layout_below="@+id/editText3"
        android:text="@string/labelSenha"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/labelUser"
        android:layout_alignLeft="@+id/labelUser"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:text="@string/labelTipo"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:ems="10" />

    <TextView
        android:id="@+id/labelMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtMatricula"
        android:layout_alignLeft="@+id/txtMatricula"
        android:text="@string/labelMatricula"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/labelMatricula"
        android:layout_alignLeft="@+id/labelMatricula"
        android:ems="10" />

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtNome"
        android:layout_alignLeft="@+id/txtNome"
        android:text="@string/labelNome"
        android:textSize="12sp" />

</RelativeLayout>
